# EchoPass

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  TECHNICAL_OVERVIEW.md  environment.yml  pyproject.toml  requirements.txt
config/: dev.yaml  prod.yaml.example
docs/: LOCAL_QUICKSTART.md
echopass/: __init__.py  app.py  asr_stream_pool.py  audio_features.py  campplus_model.py  config.py  engine.py  volc_asr.py  volc_bidirectional_tts.py  volc_bigmodel_asr.py  volc_bigmodel_stream.py
echopass/agent/: dialogue_manager.py  llm_client.py  participants.py
echopass/meeting/: __init__.py  cross_meeting.py  summarizer.py  transcript_buffer.py
echopass/session/: __init__.py  manager.py
echopass/static/: index.html
echopass/static/js/: meeting-chapters.js  ui-theme.js
echopass/transport/: schemas.py  websocket_server.py
scripts/: first-run-mac.sh  first-run-windows.bat  first-run-windows.ps1  first-run.sh  gen_wake_ack_wavs.py  run.bat  run.ps1  run.sh  start.sh
sql/: schema.sql
sql/migrations/: 001_rename_speaker_demo_enrollments.sql
